--- a/weather-app-redesign/collapsingToolbar.html
+++ b/weather-app-redesign/collapsingToolbar.html
@@ -1,54 +1,44 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="sp">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Collapsing Toolbar</title>
-    <script defer src="../js/collapsingToolbar.js"></script>
-    <link rel="stylesheet" href="../css/collapsingToolbar.css">
+    <title>Google Weather App Redesign</title>
+    <link rel="shortcut icon" href="./storage/img/logo.png" type="image/png">
+    <link rel="stylesheet" href="./css/style.css">
+    <script type="module" defer src="js/main.js"></script>
 </head>
 <body>
-    <!-- Toolbar que se colapsa -->
-    <header class="toolbar" id="toolbar">
-        <div class="search">
-            <input type="text" placeholder="Ingrese un lugar a buscar" value="Kharkiv, Ukraine">
-            <img src="../storage/img/search_white.png">
-        </div>
-        <div class="result">
-            <ul>
-                <!-- <li>Producto 1</li> -->
-            </ul>
-        </div>
-        <div class="real_time">
-            <div>
-                <span>3°</span>
-                <div>Feels like -2°</div>
+   <header>
+        <nav id="navbar">
+           <form class="form__search" action="" method="get">
+                <div class="div__icon">
+                    <input type="text">
+                    <img src="storage/img/search_white.png">
+                </div>
+           </form>
+            <div class="div__body">
+                <div class="div__title">
+                    <h1>3°</h1>
+                    <span>Feels like -2°</span>
+                </div>
+                <div class="div__image">
+                    <img src="storage/img/cloud_and_sun_1.png">
+                    <span>Cloudy</span>
+                </div>
             </div>
-            <div>
-                <img src="../storage/img/cloud_and_sun_1.png">
-                <div>Cloudy</div>
+            <div id="div__footer" class="div__footer">
+                <span>January 18, 16:14</span>
+                <p><strong>Day 3°</strong><strong>Night -1°</strong></p>
             </div>
-        </div>
-        <div class="weather_today">
-            <div>January 18, 16:14</div>
-            <div>
-                <p>Day 3°</p>
-                <small>Night -1°</small>
-            </div>
-        </div>
-        <div class="toolbar_menu">
-            <a href="#" class="active">Today</a>
-            <a href="#">Tomorrow</a>
-            <a href="#">10 days</a>
-        </div>
-    </header>
+            <form class="form__submit" action="?" method="get">
+                <input type="submit" class="active" value="Today">
+                <input type="submit" value="Tomorrow">
+                <input type="submit" value="10 days">
+            </form>
+        </nav>
+   </header>
 
-    <!-- Contenido principal -->
-    <main class="content">
-        <h1>Contenido</h1>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    </main>
-
+   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
-
 </html>
